--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
     <link href="assets/css/main.css" rel="stylesheet" />
   </head>
 
-  <body class="furnitures" style="background: rgba(0, 0, 0, 0.493)">
+  <body class="furnitures" style="background: rgba(0, 0, 0, 0.493); overflow-y: scroll; scrollbar-width: none;">
     <!-- ======= Header ======= -->
     <header id="header" class="header d-flex align-items-center">
       <div
@@ -314,7 +314,7 @@
               <h5>Office Glosarry</h5>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo dicta inventore amet similique deserunt aperiam officia reprehenderit velit nulla? Fugit excepturi alias architecto illo? Delectus quia doloremque non illo quasi!
                 Placeat quia perspiciatis provident omnis consequuntur repellat fugit accusantium rerum, minima, eius nulla quibusdam. Dolores amet, accusamus in sint accusantium, vitae voluptas perspiciatis fugit, ipsam dignissimos quos iste pariatur illum?</p>
-              <a href="./funitures/bed.html">View Glossary</a>
+              <a href="./assets/furniture/bed.html">View Glossary</a>
             </div>
 
             <!-- start of card one -->
@@ -344,7 +344,7 @@
             </div>
 
             <!-- start of card one -->
-            <div class="card-item" >
+            <div class="card-item" id="hidden">
               <img src="https://cdn.pixabay.com/photo/2017/08/27/10/16/interior-2685521_1280.jpg" alt="">
               <h5>Office Glosarry</h5>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo dicta inventore amet similique deserunt aperiam officia reprehenderit velit nulla? Fugit excepturi alias architecto illo? Delectus quia doloremque non illo quasi!
@@ -393,7 +393,7 @@
             </div>
 
             <!-- start of card one -->
-            <div class="card-item" >
+            <div class="card-item" id="hidden">
               <img src="https://cdn.pixabay.com/photo/2017/08/27/10/16/interior-2685521_1280.jpg" alt="">
               <h5>Office Glosarry</h5>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo dicta inventore amet similique deserunt aperiam officia reprehenderit velit nulla? Fugit excepturi alias architecto illo? Delectus quia doloremque non illo quasi!
@@ -442,7 +442,7 @@
             </div>
 
             <!-- start of card one -->
-            <div class="card-item" >
+            <div class="card-item" id="hidden" >
               <img src="https://cdn.pixabay.com/photo/2017/08/27/10/16/interior-2685521_1280.jpg" alt="">
               <h5>Office Glosarry</h5>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo dicta inventore amet similique deserunt aperiam officia reprehenderit velit nulla? Fugit excepturi alias architecto illo? Delectus quia doloremque non illo quasi!
